; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_ProcReleaseLocks.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_proc.c_ProcReleaseLocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MyProc = common dso_local global i32 0, align 4
@DEFAULT_LOCKMETHOD = common dso_local global i32 0, align 4
@USER_LOCKMETHOD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProcReleaseLocks(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @MyProc, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = call i32 (...) @LockErrorCleanup()
  %8 = load i32, i32* @DEFAULT_LOCKMETHOD, align 4
  %9 = load i32, i32* %2, align 4
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @LockReleaseAll(i32 %8, i32 %12)
  %14 = load i32, i32* @USER_LOCKMETHOD, align 4
  %15 = call i32 @LockReleaseAll(i32 %14, i32 0)
  br label %16

16:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @LockErrorCleanup(...) #1

declare dso_local i32 @LockReleaseAll(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
